--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,14 @@ body {
     
 }
 
+.col-20 {
+    width: 20%;
+}
+
+.col-80 {
+    width: 80%;
+}
+
 .col-100 {
     width: 100%;
 }
@@ -288,9 +296,16 @@ body {
 /*IMAGE*/
 .img {
     width: 250px;
-    height:250px
+    height:250px;
 }
 
 .h-400 {
     height: 500px;
+}
+
+.img-2 {
+    object-fit: center;
+    width: 100px;
+    border-radius: 50%;
+    height: 100px;
 }
