--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .col-33 {
-    width
+    width: 33%;
 }
 
 
@@ -50,6 +50,13 @@ body {
 
 .main-container-2 {
     padding: 20px;
+    font-size: 14px;
+    background-color: #9792e4;
+    
+}
+
+.main-container-3 {
+    
     font-size: 14px;
     background-color: #9792e4;
     
@@ -126,6 +133,10 @@ body {
     padding: 5px;
 }
 
+.pa-10 {
+    padding: 10px;
+}
+
 .pa-20 {
     padding: 20px;
 }
@@ -159,9 +170,20 @@ body {
    color: #9792e4;
  }
 
+ .text-grey {
+    color: #cdccf2;
+ }
+
+ .text-yellow {
+    color: #fdc15f;
+    font-size: 50px;
+ }
+
  .text-12 {
     font-size: 12px;
  }
+
+
 
 /*COLORS */
 .bg-lightblue {
@@ -180,6 +202,9 @@ body {
 .margin-top-10 {
     margin-top: 10px;
 }
+.margin-top-20 {
+    margin-top: 20px;
+}
 
 .margin-top-30 {
     margin-top: 30px;
@@ -187,6 +212,10 @@ body {
 
 .margin-top-50 {
     margin-top: 50px;
+}
+
+.mt-1 {
+    margin-top: -60px;
 }
 
 .margin-top-40 {
@@ -205,6 +234,18 @@ body {
     margin-left: 150px;
 }
 
+.m-left-340 {
+    margin-left: 340px;
+}
+
+.m-left-390 {
+    margin-left: 390px;
+}
+
+.m-left {
+    margin-left: 270px;
+}
+
 .margin-left-125 {
     margin-left: 125px;
 }
@@ -214,7 +255,7 @@ body {
 }
 
 .margin-bottom {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .margin-left-50 {
@@ -260,7 +301,12 @@ body {
 }
 
 
-
+.debug-4 {
+    
+    height: 300px;
+    background-color: white;
+    border-radius: 20px;
+}
 
 
 .debug {
@@ -288,6 +334,14 @@ body {
     margin: 20px;
 }
 
+.m-30 {
+    margin: 30px;
+}
+
+.m-25 {
+    margin: 25px;
+}
+
 .g-10 {
     margin-left: 10px;
     margin-right: 10px;
@@ -308,4 +362,20 @@ body {
     width: 100px;
     border-radius: 50%;
     height: 100px;
+}
+
+/*BUTTONS */
+
+.button-v {
+    background-color: #9792e4;
+    padding: 10px 15px;
+    color: white !important;
+    
+    border-radius: 20px;
+}
+
+.margin-bottom {
+    margin-bottom: 60px;
+    
+
 }
