--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,15 @@ body {
     
 }
 
+.footer-container {
+    padding: 20px;
+    
+    background-color: #333333;
+    
+    
+    
+}
+
 .main-container-3 {
     
     font-size: 14px;
@@ -416,4 +425,14 @@ body {
 .a-class {
     color: white;
     text-decoration: underline;
+}
+
+.a-class-2 {
+    color: #8682c6;
+    text-decoration: underline;
+}
+
+.link-3 {
+    text-decoration: underline;
+    color:  #8682c6;
 }
