--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ body {
     
 }
 
+.col-10 {
+    width: 10%;
+}
+
 .col-20 {
     width: 20%;
 }
@@ -183,6 +187,18 @@ body {
     color: #cdccf2;
  }
 
+ .text-dg {
+   color: #5a6e7f;
+ }
+
+ .text-blue {
+    color: #0084fd;
+ }
+
+ .tg {
+    color: #a9a9a9;
+ }
+
  .text-yellow {
     color: #fdc15f;
     font-size: 50px;
@@ -190,6 +206,10 @@ body {
 
  .text-12 {
     font-size: 12px;
+ }
+
+ .text-40 {
+    font-size: 40px;
  }
 
 
@@ -279,8 +299,16 @@ body {
     margin-bottom: 40px;
 }
 
+.margin-left-20 {
+    margin-left: 20px;
+}
+
 .margin-left-50 {
     margin-left: 50px;
+}
+
+.margin-left-25 {
+    margin-left: 25px;
 }
 
 .sp-between {
@@ -347,6 +375,10 @@ body {
     width: 50%;
 }
 
+.w-70 {
+    width: 70%;
+}
+
 .w-33 {
     width: 33%;
 }
@@ -395,10 +427,26 @@ body {
     border-radius: 20px;
 }
 
+.button-v-2 {
+    background-color: #9792e4;
+    padding: 10px 45px;
+    color: white !important;
+    
+    border-radius: 20px;
+}
+
 .button-white {
     background-color: white;
     padding: 18px 35px;
     color: #9c97e5 !important;
+    
+    border-radius: 50px;
+}
+
+.button-blue {
+    background-color: #0084fd;
+    padding: 10px 25px;
+    color: white !important;
     
     border-radius: 50px;
 }
@@ -435,4 +483,8 @@ body {
 .link-3 {
     text-decoration: underline;
     color:  #8682c6;
+}
+
+.h-20 {
+    height: 20px;
 }
