--- a/css/style.css
+++ b/css/style.css
@@ -515,3 +515,29 @@ body {
     color: #0084fd;
 }
 
+/*RESPONSIVA */
+@media screen and (min-width: 768px) {
+    .col-md-2 {
+        width: calc(100% / 3 * 2);
+        
+    }
+
+    .col-md-33 {
+        width: calc(100% / 3);
+    }
+
+    .col-md-50 {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .col-50 {
+        width: 50%
+    }
+
+    .col-lg-33 {
+        width: calc(100% / 3);
+    }
+}
+    
